# python-cfsonarr-matcher

./: .gitignore  pyproject.toml  requirements.in  requirements.txt
cfsonarrmatcher/: __init__.py  matcher.py
