[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cfsonarrmatcher"
version = "0.4.8"
dependencies = [ "unidecode", "rapidfuzz", "python-dateutil", "regex", "fauxlogger @ git+https://github.com/codefaux/python-fauxlogger@main", "fauxjson @ git+https://github.com/codefaux/python-fauxjson@main" ]
